RESOLVED FIXED47374
REGRESSION (r47440): Printing Mail messages with large fonts does not fill page
https://bugs.webkit.org/show_bug.cgi?id=47374
Summary REGRESSION (r47440): Printing Mail messages with large fonts does not fill page
mitz
Reported 2010-10-07 13:09:22 PDT
<rdar://problem/8142645> In the legacy (paint-time pagination) printing model, when there are overlapping lines, adjustPageHeightDeprecated() is not idempotent, since the truncation point imposed by line n, namely the top of line n, is above the bottom of line n-1, so in the next round, line n-1 moves the truncation point up again. Patch forthcoming.
Attachments
Ignore the part of the line that overlaps the next line (2.08 KB, patch)
2010-10-07 13:14 PDT, mitz
simon.fraser: review+
mitz
Comment 1 2010-10-07 13:14:49 PDT
Created attachment 70141 [details] Ignore the part of the line that overlaps the next line
mitz
Comment 2 2010-10-07 14:02:25 PDT
Note You need to log in before you can comment on or make changes to this bug.